@@ -10,14 +10,19 @@ import org.eclipse.draw2d.StackLayout;
 import org.eclipse.draw2d.ToolbarLayout;
 import org.eclipse.gef.EditPart;
 import org.eclipse.gef.EditPolicy;
+import org.eclipse.gef.Request;
 import org.eclipse.gef.editpolicies.LayoutEditPolicy;
+import org.eclipse.gmf.runtime.diagram.core.edithelpers.CreateElementRequestAdapter;
 import org.eclipse.gmf.runtime.diagram.ui.editparts.IGraphicalEditPart;
 import org.eclipse.gmf.runtime.diagram.ui.editparts.ITextAwareEditPart;
 import org.eclipse.gmf.runtime.diagram.ui.editparts.ShapeNodeEditPart;
 import org.eclipse.gmf.runtime.diagram.ui.editpolicies.ConstrainedToolbarLayoutEditPolicy;
+import org.eclipse.gmf.runtime.diagram.ui.editpolicies.CreationEditPolicy;
 import org.eclipse.gmf.runtime.diagram.ui.editpolicies.EditPolicyRoles;
+import org.eclipse.gmf.runtime.diagram.ui.requests.CreateViewAndElementRequest;
 import org.eclipse.gmf.runtime.draw2d.ui.figures.ConstrainedToolbarLayout;
 import org.eclipse.gmf.runtime.draw2d.ui.figures.WrappingLabel;
+import org.eclipse.gmf.runtime.emf.type.core.IElementType;
 import org.eclipse.gmf.runtime.gef.ui.figures.DefaultSizeNodeFigure;
 import org.eclipse.gmf.runtime.gef.ui.figures.NodeFigure;
 import org.eclipse.gmf.runtime.notation.View;
@@ -25,6 +30,7 @@ import org.eclipse.swt.graphics.Color;
 import org.opendds.modeling.diagram.main.edit.policies.LibPackage2ItemSemanticEditPolicy;
 import org.opendds.modeling.diagram.main.edit.policies.OpenDDSTextSelectionEditPolicy;
 import org.opendds.modeling.diagram.main.part.OpenDDSVisualIDRegistry;
+import org.opendds.modeling.diagram.main.providers.OpenDDSElementTypes;
 
 import com.ociweb.gmf.figures.UmlPackageFig;
 
@@ -56,9 +62,14 @@ public class LibPackage2EditPart extends ShapeNodeEditPart {
 	}
 
 	/**
-	 * @generated
+	 * @see org.opendds.modeling.diagram.main.edit.parts.LibPackageEditPart#createDefaultEditPolicies()
+	 * @generated NOT
 	 */
 	protected void createDefaultEditPolicies() {
+		// Custom code begin
+		installEditPolicy(EditPolicyRoles.CREATION_ROLE,
+				new CreationEditPolicy());
+		// Custom code end
 		super.createDefaultEditPolicies();
 		installEditPolicy(EditPolicyRoles.SEMANTIC_ROLE,
 				new LibPackage2ItemSemanticEditPolicy());
@@ -160,10 +171,10 @@ public class LibPackage2EditPart extends ShapeNodeEditPart {
 
 	/**
 	 * Creates figure for this edit part.
-	 * 
+	 *
 	 * Body of this method does not depend on settings in generation model
 	 * so you may safely remove <i>generated</i> tag and modify it.
-	 * 
+	 *
 	 * @generated
 	 */
 	protected NodeFigure createNodeFigure() {
@@ -242,6 +253,37 @@ public class LibPackage2EditPart extends ShapeNodeEditPart {
 	public EditPart getPrimaryChildEditPart() {
 		return getChildBySemanticHint(OpenDDSVisualIDRegistry
 				.getType(LibPackageName2EditPart.VISUAL_ID));
+	}
+
+	/**
+	 * @see org.opendds.modeling.diagram.main.edit.parts.LibPackageEditPart#getTargetEditPart(Request)
+	 * @generated NOT
+	 */
+	public EditPart getTargetEditPart(Request request) {
+		if (request instanceof CreateViewAndElementRequest) {
+			CreateElementRequestAdapter adapter = ((CreateViewAndElementRequest) request)
+					.getViewAndElementDescriptor()
+					.getCreateElementRequestAdapter();
+			IElementType type = (IElementType) adapter
+					.getAdapter(IElementType.class);
+			if (type == OpenDDSElementTypes.LibPackage_3001) {
+				return getChildBySemanticHint(OpenDDSVisualIDRegistry
+						.getType(LibPackageUmlPackageCompartment2EditPart.VISUAL_ID));
+			}
+			if (type == OpenDDSElementTypes.DataLib_3002) {
+				return getChildBySemanticHint(OpenDDSVisualIDRegistry
+						.getType(LibPackageUmlPackageCompartment2EditPart.VISUAL_ID));
+			}
+			if (type == OpenDDSElementTypes.DcpsLib_3003) {
+				return getChildBySemanticHint(OpenDDSVisualIDRegistry
+						.getType(LibPackageUmlPackageCompartment2EditPart.VISUAL_ID));
+			}
+			if (type == OpenDDSElementTypes.PolicyLib_3004) {
+				return getChildBySemanticHint(OpenDDSVisualIDRegistry
+						.getType(LibPackageUmlPackageCompartment2EditPart.VISUAL_ID));
+			}
+		}
+		return super.getTargetEditPart(request);
 	}
 
 	/**
